--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.fmorea.chess"
         minSdk 21
         targetSdk 32
-        versionCode 2
-        versionName "stone"
+        versionCode 4
+        versionName "stone4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
